[package]
name = "delorean"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
git2 = "0.19.0"
glob-match = "0.2.1"
indicatif = "0.17.9"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
